# testudo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  HANDOVER.md  README.md  STRATEGIC_ROADMAP.md  architecture.md  best-practices.md  clarity.md  master-claude.md  package-lock.json  prd.md  technical_spec.md
.claude/: settings.json
.claude/tdd-guard/data/: instructions.md  modifications.json
.github/workflows/: rust.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: critical_build_fixes_2025_09_02.md  critical_implementation_notes.md  development_standards.md  frontend_phase_2_completion.md  leptos_07_migration_victory_2025_09_02.md  onboarding_status.md  phase1_completion_and_thaw_ui_plan.md  project_overview.md  project_structure.md  suggested_commands.md  tech_stack_and_architecture.md  testudo-onboard-phase1-navigation-complete.md  testudo-onboard-phase3-complete.md
config/: default.toml
crates/disciplina/: CLAUDE.md  Cargo.toml
crates/disciplina/src/: calculator.rs  errors.rs  lib.rs  types.rs
crates/disciplina/tests/: position_sizing_tests.proptest-regressions  position_sizing_tests.rs
crates/formatio/: CLAUDE.md  Cargo.toml
crates/formatio/src/: decider.rs  exchange.rs  executor.rs  lib.rs  metrics.rs  observer.rs  ooda.rs  orientator.rs  types.rs
crates/formatio/tests/: decider_integration_tests.rs  full_loop_integration_test.rs  ooda_tests.rs
crates/imperium/: CLAUDE.md  Cargo.toml
crates/imperium/src/: api.rs  auth.rs  cache.rs  config.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  types.rs  websocket.rs
crates/prudentia/: CLAUDE.md  Cargo.toml
crates/prudentia/proptest-regressions/risk/: assessment_rules.txt
crates/prudentia/src/: lib.rs
crates/prudentia/src/exchange/: adapters.rs  binance.rs  circuit_breaker.rs  failover.rs  mock.rs  mod.rs  rate_limiter.rs  websocket.rs
crates/prudentia/src/monitoring/: loss_tracker.rs  metrics.rs  mod.rs  portfolio_tracker.rs
crates/prudentia/src/risk/: assessment.rs  assessment_rules.rs  engine.rs  mod.rs  portfolio_rules.rs  protocol.rs  rules.rs  validator.rs
crates/prudentia/src/types/: mod.rs  protocol_limits.rs  risk_assessment.rs  risk_profile.rs  trade_proposal.rs
crates/testudo-types/: Cargo.toml
crates/testudo-types/src/: lib.rs
docs/: STRATEGIC_ROADMAP.md  TASK2_COMPLETED.md  architecture.md  prd.md  technical_spec.md
frontend/: Cargo.toml  FINAL_HANDOVER.md  HANDOVER.md  README.md  THEME_UPDATE.md  Trunk.toml  clarityUI.md  index.html  package-lock.json  package.json  pretty_ui.md  refactor_plan.md  tailwind.config.js
frontend/components/auth/: AuthModal.tsx  LoginForm.tsx  RomanShieldLanding.tsx  SignUpForm.tsx
frontend/components/ui/: button.tsx  card.tsx  dialog.tsx
frontend/docker/: .dockerignore  Dockerfile
frontend/env_templates/: .env.example
frontend/lib/: auth-client.ts
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/components/auth/: auth_bar.rs  auth_provider.rs  login_panel.rs  mod.rs  protected_route.rs
frontend/src/components/layout/: mod.rs  navigation_bar.rs
frontend/src/components/trading/: mod.rs  order_form.rs  position_table.rs  van_tharp_calculator.rs  van_tharp_calculator_minimal.rs
frontend/src/components/ui/: mod.rs  notification_system.rs  price_card.rs  tooltip.rs  trading_button.rs  websocket_service.rs  websocket_service_minimal.rs
frontend/styles/: globals-nord-backup.css  globals.css  thaw-custom.css
migrations/: 001_initial_schema.sql
sop/: order_execution_protocol.md  risk_calculation_verification.md  system_recovery.md
src/: CLAUDE.md  main.rs
