[package]
name = "testudo"
version = "0.1.0"
edition = "2021"
description = "Disciplined crypto trading platform with Van Tharp position sizing"
license = "MIT"
repository = "https://github.com/testudo-platform/testudo"
keywords = ["trading", "crypto", "risk-management", "position-sizing"]
categories = ["finance", "web-programming"]

[workspace]
members = [
    "crates/disciplina",
    "crates/formatio",
    "crates/prudentia",
    "crates/imperium",
    "crates/testudo-types",
    "frontend",
]
resolver = "2"
default-members = ["crates/imperium"]

[workspace.dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
hyper = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.14"
clap = { version = "4.0", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

[workspace.dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }