[package]
name = "formatio"
version = "0.1.0"
edition = "2021"
description = "OODA Loop trading operations - systematic trade execution framework"
license = "MIT"

[dependencies]
# Internal workspace dependencies
disciplina = { path = "../disciplina" }
testudo-types = { path = "../testudo-types" }

# Financial calculations
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"

# State management
dashmap = "5.5"

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
prudentia = { path = "../prudentia" } # For MockExchange in tests

[features]
default = ["ooda-verification"]
ooda-verification = []  # Enables OODA loop timing verification
