[package]
name = "imperium"
version = "0.1.0"
edition = "2021"
description = "API server and command interface for Testudo trading platform"
license = "MIT"

[[bin]]
name = "testudo"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
disciplina = { path = "../disciplina" }
formatio = { path = "../formatio" }
prudentia = { path = "../prudentia" }
testudo-types = { path = "../testudo-types" }

# Inherited from workspace
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
clap.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true

# Crate-specific dependencies
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.0"
